[gd_scene load_steps=10 format=3 uid="uid://dqti7new751a1"]

[ext_resource type="Theme" uid="uid://cnw25cdhcyxjc" path="res://sources/Default.tres" id="1_bm1nj"]
[ext_resource type="Script" path="res://scenes/Transition.gd" id="1_rnxrb"]

[sub_resource type="Animation" id="Animation_qu0rm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopVBoxContainer/TopRect/Container/VBoxContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["[center]正在载入[/center]"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ButtomText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ButtomText:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["[center]按任意键继续[/center]"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ProgressBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ProgressBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7mnrj"]
resource_name = "pressAnyKeyToContinue"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ButtomText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["[center][color=#F5F5DC]按任意键继续[/color][/center]"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ButtomText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ProgressBar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ProgressBar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l7ndm"]
resource_name = "pressAnyKeyToContinueFlash"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtomVBoxContainer/ButtomRect/VBoxContainer/ButtomText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60qj2"]
_data = {
"RESET": SubResource("Animation_qu0rm"),
"pressAnyKeyToContinue": SubResource("Animation_7mnrj"),
"pressAnyKeyToContinueFlash": SubResource("Animation_l7ndm")
}

[sub_resource type="Animation" id="Animation_ua5qk"]
resource_name = "Loading"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopVBoxContainer/TopRect/Container/VBoxContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["[center][color=#F5F5DC]正在载入[/color][/center]", "[center][color=#F5F5DC]正在载入.[/color][/center]", "[center][color=#F5F5DC]正在载入..[/color][/center]", "[center][color=#F5F5DC]正在载入...[/color][/center]", "[center][color=#F5F5DC]正在载入....[/color][/center]", "[center][color=#F5F5DC]正在载入.....[/color][/center]", "[center][color=#F5F5DC]正在载入......[/color][/center]"]
}

[sub_resource type="Animation" id="Animation_43d4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopVBoxContainer/TopRect/Container/VBoxContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["[center][color=#F5F5DC]正在载入[/color][/center]"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aq0ao"]
_data = {
"Loading": SubResource("Animation_ua5qk"),
"RESET": SubResource("Animation_43d4g")
}

[node name="Transition" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bm1nj")
script = ExtResource("1_rnxrb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="TopRect" type="ColorRect" parent="TopVBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
color = Color(0, 0, 0, 0.705882)

[node name="Container" type="CenterContainer" parent="TopVBoxContainer/TopRect"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TopVBoxContainer/TopRect/Container"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="RichTextLabel" parent="TopVBoxContainer/TopRect/Container/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#F5F5DC]正在载入[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="Tip" type="RichTextLabel" parent="TopVBoxContainer/TopRect/Container/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#F5F5DC][color=yellow]卡隆币[/color]是所有国家通行的交易货币[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="TopBarContainer" type="HBoxContainer" parent="TopVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ButtomVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="ButtomBarContainer" type="HBoxContainer" parent="ButtomVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ButtomRect" type="ColorRect" parent="ButtomVBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="ButtomVBoxContainer/ButtomRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="ButtomVBoxContainer/ButtomRect/VBoxContainer"]
texture_filter = 1
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="ButtomText" type="RichTextLabel" parent="ButtomVBoxContainer/ButtomRect/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]按任意键继续[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="LoadingIcon" type="TextureRect" parent="ButtomVBoxContainer/ButtomRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_60qj2")
}

[node name="Loading" type="AnimationPlayer" parent="."]
autoplay = "Loading"
libraries = {
"": SubResource("AnimationLibrary_aq0ao")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
